5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1756_1576.log
== TEST (2019-05-28 20:01:16) 
-- CODE:
from numpy import*
x= int(input("q?"))
while()
-- ERROR:
File "XXXX", line 3
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:17:41) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont = 0
cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont < size(v1)):
	if (v1[cont] == pa and v2[cont] == pe):
		cont1 = cont1 + 1
	elif(v1[cont] == pe  and v2[cont] == t):
		cont1 = cont1 + 1
	elif(v1[cont] == t and v2[cont] == pa):
		cont1 = cont1 + 1
	elif(v1[cont] != v2[cont]):
		cont2 = cont2 + 1
	cont = cont + 1
				
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- EXECUTION TIME:
0.482835
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
